[metadata]
name = heat-cfnclient
version = 0.1.0
summary = CloudFormation compatibile Heat client
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    heat_cfnclient
scripts =
    bin/heat-boto
    bin/heat-cfn
    bin/heat-watch

[compile_catalog]
directory = heat/locale
domain = heat

[update_catalog]
domain = heat
output_dir = heat/locale
input_file = heat/locale/heat.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = heat/locale/heat.pot
